Bug fix preventing form styling from working on Safari

--- a/css/home.css
+++ b/css/home.css
@@ -204,7 +204,7 @@ section:first-of-type {
 .home .search-form label {
     width: 100%;
 }
-.home .search-form input[type="search"] {
+.home .search-form .search-field {
     border: 10px solid #e95a0c;
     border-right: 0;
     padding: 5px;
@@ -219,6 +219,19 @@ section:first-of-type {
     border-left: 0;
     padding-bottom: 3px;
 }
+
+/* Needed for overriding safari user agent stylesheet */
+input[type=search]::-webkit-search-cancel-button,
+input[type=search]::-webkit-search-decoration,
+input[type=search]::-webkit-search-results-button,
+input[type=search]::-webkit-search-results-decoration {
+  -webkit-appearance:none;
+}
+input[type=search] {
+  -webkit-appearance: textfield;
+  -webkit-box-sizing: border-box;
+}
+
 .home .search-form .dashicons, .home .search-form .dashicons-search::before {
     font-size: 30px;
     line-height: 34px;
@@ -226,6 +239,7 @@ section:first-of-type {
     width: 50px;
     color: #e95a0c;
 }
+
 
 /* 5.3 COURSE TEASERS                */
 .course-category-teaser-wrapper {
